[gd_scene load_steps=17 format=3 uid="uid://bjy7jsrf67xy6"]

[ext_resource type="Texture2D" uid="uid://5cify65o2y6a" path="res://enemies/flying_enemy.png" id="1_ekdh3"]
[ext_resource type="Script" path="res://enemies/flying_enemy.gd" id="1_ks88r"]
[ext_resource type="PackedScene" uid="uid://da4kflkjmnvb3" path="res://BaseScenesToInherit/stats.tscn" id="3_mxng5"]
[ext_resource type="PackedScene" uid="uid://dqqxrsakj521w" path="res://Collisions/hitbox.tscn" id="3_wr6hp"]
[ext_resource type="PackedScene" uid="uid://c2485mvh1adsb" path="res://Collisions/hurtbox.tscn" id="4_yjtcl"]
[ext_resource type="PackedScene" uid="uid://dq6q8o8r262w7" path="res://enemies/way_point_path_finding.tscn" id="6_708ao"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yuq7o"]
atlas = ExtResource("1_ekdh3")
region = Rect2(0, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vequ"]
atlas = ExtResource("1_ekdh3")
region = Rect2(32, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsh8n"]
atlas = ExtResource("1_ekdh3")
region = Rect2(64, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_sycas"]
atlas = ExtResource("1_ekdh3")
region = Rect2(96, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tfwdb"]
atlas = ExtResource("1_ekdh3")
region = Rect2(128, 0, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvt0q"]
atlas = ExtResource("1_ekdh3")
region = Rect2(160, 0, 32, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_4av2l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yuq7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vequ")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsh8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sycas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfwdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvt0q")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_xg2ko"]
radius = 1.41421

[sub_resource type="CircleShape2D" id="CircleShape2D_4ms87"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_mrw0w"]
radius = 8.0

[node name="FlyingEnemy" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 9
motion_mode = 1
script = ExtResource("1_ks88r")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_4av2l")
autoplay = "default"
frame_progress = 0.567884
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xg2ko")

[node name="Hitbox" parent="." instance=ExtResource("3_wr6hp")]
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_4ms87")

[node name="Hurtbox" parent="." instance=ExtResource("4_yjtcl")]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_mrw0w")

[node name="Stats" parent="." instance=ExtResource("3_mxng5")]
max_health = 6

[node name="WayPointPathFinding" parent="." instance=ExtResource("6_708ao")]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]
[connection signal="health_changed" from="Stats" to="." method="_on_stats_health_changed"]
[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
